# byte-offset-tokenizer

./: README.md  requirements.txt  setup.cfg
byte_offset_tokenizer/: __init__.py  tokenizer.py
