[metadata]
name = Byte-Offset Tokenizer
version = 1.0.0
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Tokenizer for our byte based transformer model. See: https://huggingface.co/SzegedAI/charmen-electra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://huggingface.co/SzegedAI/charmen-electra
project_urls =
    Bug Tracker = https://github.com/szegedai/byte-offset-tokenizer/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.22.0
    torch>=1.10.0